environments/gcloud/k8s/app-endpoint-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-endpoint
  namespace: default
  labels:
    app: app-endpoint
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-endpoint
  template:
    metadata:
      labels:
        app: app-endpoint
    spec:
      containers:
        - name: app-endpoint-server
          image: gcr.io/greenfield-app-0/app-endpoint-server:cudagl
          ports:
            - containerPort: 8081
          resources:
            limits:
              nvidia.com/gpu: 1
          securityContext:
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /tmp
              name: runtime-dir
      volumes:
        - name: runtime-dir
          hostPath:
            path: /tmp
            type: Directory
