environments/gcloud/k8s/app-endpoint-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-endpoint-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "app-endpoint-static-ip"
spec:
  defaultBackend:
    service:
      name: app-endpoint
      port:
        number: 8081
